@@ -212,7 +212,6 @@ bool is_downloading_state(int const st)
 		, m_max_uploads((1 << 24) - 1)
 		, m_num_uploads(0)
 		, m_enable_pex(!bool(p.flags & torrent_flags::disable_pex))
-		, m_magnet_link(false)
 		, m_apply_ip_filter(p.flags & torrent_flags::apply_ip_filter)
 		, m_pending_active_change(false)
 		, m_connect_boost_counter(static_cast<std::uint8_t>(settings().get_int(settings_pack::torrent_connect_boost)))
@@ -246,15 +245,6 @@ bool is_downloading_state(int const st)
 		if (!m_apply_ip_filter)
 		{
 			inc_stats_counter(counters::non_filter_torrents);
-		}
-
-		if (!p.ti || !p.ti->is_valid())
-		{
-			// we don't have metadata for this torrent. We'll download
-			// it either through the URL passed in, or through a metadata
-			// extension. Make sure that when we save resume data for this
-			// torrent, we also save the metadata
-			m_magnet_link = true;
 		}
 
 		if (!m_torrent_file)
@@ -6355,12 +6345,9 @@ bool is_downloading_state(int const st)
 
 		ret.info_hash = torrent_file().info_hash();
 
-		if (valid_metadata())
+		if (valid_metadata() && (flags & torrent_handle::save_info_dict))
 		{
-			if (m_magnet_link || (flags & torrent_handle::save_info_dict))
-			{
-				ret.ti = m_torrent_file;
-			}
+			ret.ti = m_torrent_file;
 		}
 
 		if (m_torrent_file->is_merkle_torrent())
