@@ -1,4 +1,5 @@
 
+	* remove special case to save metadata in resume data unconditionally when added throught magnet link
 	* fix incorrectly inlined move-assignment of file_storage
 	* add session::paused flag, and the ability to construct a session in paused mode
 	* fix session-pause causing tracker announces to fail
